# ChangeLog for net-analyzer/tcpreplay
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/tcpreplay/ChangeLog,v 1.46 2013/05/29 18:31:21 jer Exp $

*tcpreplay-3.5.0_beta1 (29 May 2013)

  29 May 2013; Jeroen Roovers <jer@gentoo.org> -tcpreplay-3.4.5_beta2.ebuild,
  -tcpreplay-3.4.5_beta3.ebuild, +tcpreplay-3.5.0_beta1.ebuild:
  Version bump.

*tcpreplay-3.4.4-r2 (12 Apr 2012)

  12 Apr 2012; Jeroen Roovers <jer@gentoo.org> tcpreplay-3.4.4-r1.ebuild,
  +tcpreplay-3.4.4-r2.ebuild, +files/tcpreplay-3.4.4-cross-compile.patch,
  tcpreplay-3.4.5_beta3.ebuild:
  Add cross-compile patch by Bertrand Jacquin (bug #375679). Use emake instead
  of make. Fix one quoting issue.

*tcpreplay-3.4.5_beta3 (22 Jan 2012)

  22 Jan 2012; Jeroen Roovers <jer@gentoo.org> -tcpreplay-3.4.3.ebuild,
  -tcpreplay-3.4.4.ebuild, tcpreplay-3.4.4-r1.ebuild,
  tcpreplay-3.4.5_beta2.ebuild, +tcpreplay-3.4.5_beta3.ebuild:
  Version bump. Add --enable-dynamic-link to configure by Tupone Alfredo (bug
  #399749).

  21 Mar 2011; Thomas Kahle <tomka@gentoo.org> tcpreplay-3.4.4-r1.ebuild:
  x86 stable per bug 358665

  14 Mar 2011; Markos Chandras <hwoarang@gentoo.org> tcpreplay-3.4.4-r1.ebuild:
  Stable on amd64 wrt bug #358665

*tcpreplay-3.4.4-r1 (29 Oct 2010)

  29 Oct 2010; Peter Volkov <pva@gentoo.org> +tcpreplay-3.4.4-r1.ebuild,
  +files/tcpreplay-3.4.4-crash.patch:
  Fix buffer overflow (bug #336605) in stable version.

*tcpreplay-3.4.5_beta2 (29 Oct 2010)

  29 Oct 2010; Jeroen Roovers <jer@gentoo.org>
  +tcpreplay-3.4.5_beta2.ebuild:
  Beta version bump, fixes buffer overflow (bug #336605).

*tcpreplay-3.4.4 (21 Apr 2010)

  21 Apr 2010; Peter Volkov <pva@gentoo.org> -tcpreplay-2.3.5.ebuild,
  -tcpreplay-3.2.3.ebuild, -tcpreplay-3.3.2.ebuild, -tcpreplay-3.4.1.ebuild,
  -files/tcpreplay-3.4.1-errx-exit.patch, -tcpreplay-3.4.2.ebuild,
  +tcpreplay-3.4.4.ebuild:
  Version bump. Drop old.
