@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/tcpreplay
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/tcpreplay/ChangeLog,v 1.46 2013/05/29 18:31:21 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/tcpreplay/ChangeLog,v 1.47 2013/05/29 18:37:10 jer Exp $
+
+  29 May 2013; Jeroen Roovers <jer@gentoo.org> tcpreplay-3.5.0_beta1.ebuild:
+  Fix comment. Remove extraneous whitespace.
 
 *tcpreplay-3.5.0_beta1 (29 May 2013)
 
